Moved Layout to a stack modal

--- a/css/eze.css
+++ b/css/eze.css
@@ -319,40 +319,44 @@
       margin: 4px 0 0 0; }
 .eze .eze-settings-modal {
   width: 580px; }
-.eze .eze-layout-modal {
-  width: 635px; }
-  .eze .eze-layout-modal .active-layout {
-    border: 3px solid orange; }
-  .eze .eze-layout-modal h2 {
-    margin: 20px 0 10px 0; }
-  .eze .eze-layout-modal .nav {
-    margin: 0 0 5px 0; }
-  .eze .eze-layout-modal .tab-content {
-    overflow: visible;
-    padding: 5px 0 0 0; }
-    .eze .eze-layout-modal .tab-content ul li .wrap {
+
+.eze-layout-modal .active-layout {
+  border: 3px solid orange; }
+.eze-layout-modal h1 {
+  font: normal 22px/22px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif; }
+.eze-layout-modal h2 {
+  margin: 20px 0 10px 0;
+  font: bold 14px/14px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif; }
+.eze-layout-modal .nav {
+  margin: 0 0 5px 0; }
+.eze-layout-modal .tab-content {
+  overflow: visible;
+  padding: 5px 0 0 0; }
+  .eze-layout-modal .tab-content ul li .wrap {
+    height: 36px;
+    line-height: 36px;
+    padding-right: 80px; }
+    .eze-layout-modal .tab-content ul li .wrap p {
+      width: 300px;
       height: 36px;
-      line-height: 36px; }
-      .eze .eze-layout-modal .tab-content ul li .wrap p {
-        width: 300px;
-        height: 36px;
-        float: left;
-        margin: 0;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        font: normal 12px/36px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif; }
-        .eze .eze-layout-modal .tab-content ul li .wrap p input {
-          width: 100px; }
-    .eze .eze-layout-modal .tab-content ul li .name {
-      width: 150px;
+      float: left;
+      margin: 0;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      font: normal 12px/36px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif; }
+      .eze-layout-modal .tab-content ul li .wrap p input {
+        width: 100px; }
+  .eze-layout-modal .tab-content ul li .name {
+    width: 150px;
+    margin: 0 10px 0 0; }
+  .eze-layout-modal .tab-content ul li select, .eze-layout-modal .tab-content ul li .chzn-container {
+    float: right;
+    width: 110px;
+    margin: 5px 5px 0 0; }
+  .eze-layout-modal .tab-content .add-new {
+    margin: 0; }
+    .eze-layout-modal .tab-content .add-new select, .eze-layout-modal .tab-content .add-new .chzn-container {
       margin: 0 10px 0 0; }
-    .eze .eze-layout-modal .tab-content ul li select, .eze .eze-layout-modal .tab-content ul li .chzn-container {
-      width: 110px;
-      margin: 5px 5px 0 0; }
-    .eze .eze-layout-modal .tab-content .add-new {
-      margin: 0; }
-      .eze .eze-layout-modal .tab-content .add-new select, .eze .eze-layout-modal .tab-content .add-new .chzn-container {
-        margin: 0 10px 0 0; }
 
 .eze .stack-item {
   position: absolute;
