--- a/css/sass/modals.sass
+++ b/css/sass/modals.sass
@@ -140,53 +140,58 @@
 
 
 
-	.eze-layout-modal
-		width: 635px
+.eze-layout-modal
 
-		.active-layout
-			border: 3px solid orange
+	.active-layout
+		border: 3px solid orange
 
-		h2
-			margin: 20px 0 10px 0
+	h1
+		font: normal 22px/22px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 
-		.nav
-			margin: 0 0 5px 0
+	h2
+		margin: 20px 0 10px 0
+		font: bold 14px/14px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 
-		.tab-content
-			overflow: visible
-			padding: 5px 0 0 0
+	.nav
+		margin: 0 0 5px 0
 
-			ul li
+	.tab-content
+		overflow: visible
+		padding: 5px 0 0 0
 
-				.wrap
+		ul li
+
+			.wrap
+				height: 36px
+				line-height: 36px
+				padding-right: 80px
+
+				p
+					width: 300px
 					height: 36px
-					line-height: 36px
+					float: left
+					margin: 0
+					text-overflow: ellipsis
+					white-space: nowrap
+					font: normal 12px/36px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
 
-					p
-						width: 300px
-						height: 36px
-						float: left
-						margin: 0
-						text-overflow: ellipsis
-						white-space: nowrap
-						font: normal 12px/36px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
+					input
+						width: 100px
 
-						input
-							width: 100px
+			.name
+				width: 150px
+				margin: 0 10px 0 0
 
-				.name
-					width: 150px
-					margin: 0 10px 0 0
+			select, .chzn-container
+				float: right
+				width: 110px
+				margin: 5px 5px 0 0
 
-				select, .chzn-container
-					width: 110px
-					margin: 5px 5px 0 0
+		.add-new
+			margin: 0
 
-			.add-new
-				margin: 0
-
-				select, .chzn-container
-					margin: 0 10px 0 0	
+			select, .chzn-container
+				margin: 0 10px 0 0	
 
 
 
