--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -2,132 +2,153 @@
 
 .eze
 
-    .eze-table-actions
-        margin: 0 0 20px 0
-        padding: 0
+    h1
+        font: normal 30px/30px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 
-    .eze-table-sort
-        margin-top: -40px
-        width: 700px
-        float: right
-        .nav
-            float: left
-            margin: 0 0 5px 0
-            li
-                margin-right: 10px
-            a
-                font-size: 11px
-                padding: 3px 7px
-                background: #eee
+        button
+            margin: -3px 0 0 5px
 
-            li.active a
-                background: #000
+    .eze-table
+        position: absolute
+        top: 20px
+        left: 20px
+        right: 20px
+        bottom: 20px
+        overflow: hidden
 
-        .view-options
-            margin: 6px 300px 0 0
-            font-size: 20px
+        .eze-table-actions
+            height: 35px
 
-    .eze-table-filters
-        position: fixed
-        right: 10%
-        width: 200px
-        padding: 10px
-        margin-left: 20px
-        background: #fafafa
-        border: 1px solid #eee
+            .btn
+                float: left
+                margin-right: 5px
 
-        .description
-            font-size: 11px
-            margin: 0 0 0 2px
-
-        select
-            width: 180px
-
-        form
-            margin: 0 0 10px 0
-
-            i
-                font-size: 20px
-                height: 20px
-                width: 20px
-
-    
-    .eze-datatable
-        clear: both
-        text-align: left
-        width: 70%
-        //border-collapse: separate
-        border-bottom-left-radius: 4px
-        border-bottom-right-radius: 4px
-
-        thead tr
-            font-size: 11px
-            height: 25px
-
-            th
-                padding: 6px 0
-                border-top: 1px solid #eee
-
-        tbody tr
-            background: rgba(0,0,0,0.02)
-            height: 30px
-            font: normal 12px/12px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
-            @include transition(background, 0.2s)
-        
-            &:nth-child(even)
-                background: transparent
-        
-            &:hover
-                background: rgba(255,220,0,0.1)
-                cursor: pointer
-                
-            &.active
-                background: rgba(255,220,0,0.2)
-            &.publishing
-                background: rgba(118, 212, 31, 0.2)
-            &.deleting
-                background: rgba(255, 0, 0, 0.2)
-                
-            &:last-child td
-                border-bottom: 0
-                
-            a
-                line-height: 30px
-                display: block
-        
-        .eze-table-check // Specific Cell Styles
-            padding: 0
-            width: 30px
-            vertical-align: middle
-                
-            label
-                height: 30px
-                width: 30px
-                padding: 10px
-                display: inline
-                
             input
-                margin: 2px 8px 0 -3px
-        
-        
-        .eze-table-icon // Icons with information
-            width: 16px
-            padding: 0 10px
-            border-left: 1px solid #d4d4d4
-            text-align: center
+                float: left
+                margin: 9px 5px 0 0
 
-            i
-                font-size: 14px
-                
+            .sort-by
+                float: right
+                margin-right: 0
 
-        .eze-table-no-hits // Empty table
-            td
-                text-align: center
-                padding: 40px
-                font: normal 28px/28px 'Helvetica Neue UltraLight', 'HelveticaNeue-UltraLight', 'Helvetica Neue', 'HelveticaNeue', Helvetica, Arial, sans-serif
-            
-            &:hover
-                background: rgba(0,0,0,0.02)
-                cursor: default
+                ul
+                    float: left
+                    li
+                        margin-left: 5px
 
+                        h2
+                            font: bold 12px/12px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+                            margin: 7px 7px 0 0
+                        a
+                            background: #eee
+                            padding: 4px 10px
+
+                        &.active a
+                            background: #000
+                img
+                    float: left
+                    display: inline
+                    opacity: 0.5
+
+                    &.active
+                        opacity: 1
+
+        .eze-table-content
+            position: absolute
+            top: 86px
+            right: 0
+            left: 0
+            bottom: 0
+            overflow-y: scroll
+            margin-right: 212px
+            border-bottom: 1px solid #e4e3e3
+            border-top: 1px solid #e4e3e3
+            -webkit-overflow-scrolling: touch
+            -webkit-transform: translateZ(0)
+
+            ul
+                list-style: none
+                margin: 0
+
+                &:first-child .group-header
+                    border-top: 0
+
+                li
+                    
+                    &.group-header
+                        margin: 0
+                        @include gradient(#ffffff,#fafafa)
+                        border: 1px solid #e4e3e3
+                        padding: 5px 5px 3px 5px
+                        color: #4c4c4c
+                        font: normal 11px/11px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+                        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1)
+                        position: relative
+                        z-index: 2
+
+                    &.item
+                        background: #fafafa
+                        padding: 0 0 0 120px
+                        margin: 0 0 1px 10px
+                        border-right: 1px solid #e8e8e8
+
+                        &:nth-child(2n)
+                            background: #fff
+
+                        .check
+                            float: left
+                            width: 12px
+                            margin: 0 -20px 0 -120px
+                            background: #fafafa
+                            border-bottom-right-radius: 4px
+                            padding: 2px 4px 2px 2px
+                            position: relative
+                            z-index: 1
+                            -webkit-transform: translateZ(0)
+
+                            input
+                                margin: 0
+
+                        .thumb
+                            float: left
+                            display: inline
+                            margin-left: -120px
+
+                        h2
+                            font: normal 18px/18px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+                            margin: 10px 0 5px 0
+                        p
+                            float: left
+                            width: 100%
+                            font: normal 12px/20px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+
+                            .other-locations
+                                border-bottom: 1px dashed #000
+
+        .eze-filters
+            right: 0
+            position: absolute
+            width: 180px
+            padding: 10px
+            border: 1px solid #eee
+            background: #fff
+
+            .description
+                font-size: 11px
+                margin: 0 0 0 2px
+
+            input[type="text"]
+                width: 145px
+
+            select
+                width: 180px
+
+            form
+                margin: 0 0 10px 0
+
+                .add-on
+                    padding: 3px 4px 5px 4px
+
+                    i
+                        font-size: 16px
             
