--- a/css/ie-legacy.css
+++ b/css/ie-legacy.css
@@ -9,3 +9,5 @@
 .eze .eze-comments li .add-comment .btn { top: 1px!important; }
 
 .eze #eze-toolbar ul li .quick-action {background: #1e1e1e}
+
+.eze .eze-table .eze-table-content ul li.group-header { background: #fff!important; }
