--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -4,6 +4,21 @@
 	// Custom Exceed Interface elements, besides what ships with bootstrap
 
 
+	.eze-autosave
+		padding: 0 20px 0 35px
+		font: normal 12px/44px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
+
+		img
+			background: #fff
+			border-radius: 25px
+			padding: 4px
+			margin: 9px 16px 0 0
+			position: absolute
+			top: 0
+			left: 0
+			border: 1px solid #888
+
+
 	// Custom generic list, with drag and drop
 	// ----------------------------------------------
 	.eze-items
