--- a/css/sass/modals.sass
+++ b/css/sass/modals.sass
@@ -61,6 +61,11 @@
 			font: normal 16px/16px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 			margin: 0 0 10px 0
 
+		.eze-autosave
+			position: absolute
+			top: 6px
+			right: 0
+
 
 
 
@@ -130,7 +135,7 @@
 				margin: 4px 0 0 0
 
 
-	.eze-settings-modal
+	.eze-dashboard-modal
 		width: 580px
 
 
