--- a/css/sass/stack.sass
+++ b/css/sass/stack.sass
@@ -68,22 +68,13 @@
 			-moz-animation: stack-header-move-out 0.7s ease 1 normal
 			-webkit-animation: stack-header-move-out 0.7s ease 1 normal
 
-		#autosave
-			height: 20px
+		.eze-autosave
 			float: right
-			margin: 2px 20px 0 0
-			padding: 0 0 0 35px
-			font: normal 12px/44px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
+			margin-top: 2px
 			position: relative
 
 			img
-				background: #fff
-				border-radius: 25px
-				padding: 4px
-				margin: 9px 16px 0 0
-				position: absolute
-				top: 0
-				left: 0
+				border: 0
 
 		// Stack content
 
