--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -67,6 +67,11 @@
 
 					&.edit-btn
 						right: 28px
+			
+			select, .chzn-container
+				float: right
+				width: 110px
+				margin: 5px 5px 0 0
 
 
 
