--- a/css/sass/modals.sass
+++ b/css/sass/modals.sass
@@ -23,6 +23,12 @@
 			-webkit-animation: fade-in 0.4s ease-in 1
 			min-height: 100%
 
+	.eze-stack-content
+		h1
+			font: normal 20px/20px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+
+		h2
+			font: bold 14px/14px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 
 
 	// Small modal
@@ -160,11 +166,17 @@
 	.nav
 		margin: 0 0 5px 0
 
+	.add-new
+		margin: 0
+
+		select, .chzn-container
+			margin: 0 10px 0 0
+
 	.tab-content
 		overflow: visible
 		padding: 5px 0 0 0
 
-		ul li
+		ul li // Custom list with blocks
 
 			.wrap
 				height: 36px
@@ -187,17 +199,7 @@
 				width: 150px
 				margin: 0 10px 0 0
 
-			select, .chzn-container
-				float: right
-				width: 110px
-				margin: 5px 5px 0 0
-
-		.add-new
-			margin: 0
-
-			select, .chzn-container
-				margin: 0 10px 0 0	
-
+		
 
 
 
