--- a/css/sass/stack.sass
+++ b/css/sass/stack.sass
@@ -70,11 +70,12 @@
 
 		.eze-autosave
 			float: right
-			margin-top: 2px
 			position: relative
+			margin-top: 2px
 
 			img
 				border: 0
+				margin: 9px 0 0 0
 
 		// Stack content
 
