--- a/css/sass/modals.sass
+++ b/css/sass/modals.sass
@@ -104,9 +104,9 @@
 			margin: 0 0 10px 0
 
 		.eze-items
-			li .wrap i
+			.status-icon
 				float: right
-				margin: 6px 0 0 0
+				margin: 7px 5px 0 0
 
 
 
