--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -1,6 +1,5 @@
 @import mixins
 
-// Create a distinctive style, no default Boostrap – that looks bland
 
 
 .eze // Stuff from bootstraps html and body styles
@@ -11,6 +10,31 @@
 	color: #333
 	-webkit-text-size-adjust: 100%
 	-ms-text-size-adjust: 100%
+
+
+	// Bootstrap-style
+
+
+	.status-icon
+		height: 9px
+		width: 9px
+		display: block
+		float: left
+		border-radius: 11px
+		border: 1px solid #fff
+
+		&.changed
+			background: #FFF000
+			border-color: #D8C600
+
+		&.new
+			background: #FF4632
+			border-color: #D83A29
+
+		&.published
+			background: #A3E10B
+			border-color: #91C90A
+
 
 	.nav-pills.inverted
 		li
@@ -64,10 +88,7 @@
 			color: #777
 			background: #ccc
 
-
-
 	// Size adjustments etc.
-
 	a
 		color: #000
 
