--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -21,16 +21,43 @@
 
 	// Custom generic list, with drag and drop
 	// ----------------------------------------------
+
 	.eze-items
 		list-style-type: none
 		margin: 0 0 10px 0
 		-webkit-transform: translateZ(0)
+		position: relative
 
 		li
 			margin: 0 0 5px 0
 			width: 100%
 			border-radius: 4px
 			background: #ccc
+
+			&.notification
+				background: rgba(250,250,250,0.9)
+				position: absolute
+				top: 0
+				left: 0
+				right: 0
+				bottom: 0
+				margin: 0
+				text-align: center
+				opacity: 1
+				@include transition()
+
+				p
+					height: 26px
+					position: absolute
+					background: #fafafa
+					top: 50%
+					left: 0
+					right: 0
+					margin-top: -13px
+					font: normal 20px/20px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
+
+					img
+						margin: -4px 7px 0 0
 
 			.wrap
 				background: #fff
