--- a/css/sass/object-edit.sass
+++ b/css/sass/object-edit.sass
@@ -214,7 +214,7 @@
 				margin-bottom: 5px
 
 				i
-					margin: 0 5px 0 0
+					margin: 2px 5px 0 0
 			h2
 				font: bold 12px/18px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 				margin-bottom: 0
