Added a IE rule for rgba backgrounds

--- a/css/ie-legacy.css
+++ b/css/ie-legacy.css
@@ -11,3 +11,4 @@
 .eze #eze-toolbar ul li .quick-action {background: #1e1e1e}
 
 .eze .eze-table .eze-table-content ul li.group-header { background: #fff!important; }
+.eze .eze-items li.notification { background: #fafafa!important; }
